Add basic styling and structure

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@ body {
   align-items: center;
   height: 100vh;
 }
+
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
