--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 89px;
   background-color: white;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 0.813rem;
   letter-spacing: 1.9px;
 }
@@ -25,6 +25,10 @@
   display: flex;
   align-items: center;
   margin-left: 8%;
+}
+
+ul {
+  margin: 0 auto;
 }
 
 .left-side > ul {
